--- a/html/index.html
+++ b/html/index.html
@@ -3,17 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bootstrap Example</title>
+    <title>My new Webpage</title>
     <!-- Bootstrap CSS -->
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <!-- Custom CSS -->
     <link href="styles.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-qUnV+bV8bHTFuwWK2F7w0sYz+cF2n59nLvtSMJVErAnFuGBHqlDlHmUeE4kEezN7q0jWMrQJevWG5A8PkRW7wA==" crossorigin="anonymous" rel="stylesheet"/>
 </head>
 <body class="d-flex flex-column min-vh-100">
 
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">Navbar</a>
+        <a class="navbar-brand" href="#"><i class="fas fa-home"></i> Welcome to HomePage</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -23,10 +24,10 @@
                     <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Features</a>
+                    <a class="nav-link" href="#">Profile</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Pricing</a>
+                    <a class="nav-link" href="#">About me</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Contact</a>
@@ -38,8 +39,8 @@
     <!-- Hero Section -->
     <div class="jumbotron jumbotron-fluid">
         <div class="container">
-            <h1 class="display-4">Hello</h1>
-            <p class="lead">Welcome to my Page</p>
+            <h1 class="display-4">Hi Everyone</h1>
+            <p class="lead">Welcome to my Test Web Page</p>
         </div>
     </div>
 
@@ -47,9 +48,9 @@
     <div class="container mb-4">
         <div class="row">
             <div class="col-md-4">
-                <h2>Heading</h2>
-                <p>Some example text. Some example text. Some example text. Some example text.</p>
-                <p><a class="btn btn-secondary" href="#" role="button">View details »</a></p>
+                <h2>My Hobbies</h2>
+                <p>My hobbies are : hang out with my friends and cars, warbirds and modern war fighters, reading books about world war 2</p>
+                <img src="./images/303_Squadron.jpg" alt="Image Description" class="img-fluid">
             </div>
             <div class="col-md-4">
                 <h2>Heading</h2>
@@ -67,7 +68,7 @@
     <!-- Footer -->
     <footer class="mt-auto bg-light text-center text-lg-start">
         <div class="container p-4">
-            <p>&copy; 2024 Your Website</p>
+            <p>&copy; vassa306 Website</p>
         </div>
     </footer>
 
